use html/template to fix encoding

--- a/resume.html
+++ b/resume.html
@@ -244,7 +244,7 @@
 
   <li class=deet>Collaborate with the team to identify and fix technical problems</li>
 
-  <li class=deet>Analyze users' needs with the Product Manager and find solutions to serve them</li>
+  <li class=deet>Analyze users&#39; needs with the Product Manager and find solutions to serve them</li>
 
   <li class=deet>Check that the software accomplishes the standards of the company</li>
 
@@ -302,7 +302,7 @@
 
   <li class=deet>Event-driven architecture (EDA) and microservices</li>
 
-  <li class=deet>Usage of Amazon Web Services (Lambda [Go & NodeJS], Step Functions, SQS, S3 and Cloudwatch)</li>
+  <li class=deet>Usage of Amazon Web Services (Lambda [Go &amp; NodeJS], Step Functions, SQS, S3 and Cloudwatch)</li>
 
   <li class=deet>Develop an API in Go with MongoDB and another one with MySQL to control the data of the system</li>
 
@@ -376,7 +376,7 @@
 
   <li class=deet>Developer in different projects for Andbank and Java consultant for a new project in Banc Sabadell.</li>
 
-  <li class=deet>Tech used: Java, HTML, CSS, JavaScript, Struts2, Spring, Hibernate & SubVersion</li>
+  <li class=deet>Tech used: Java, HTML, CSS, JavaScript, Struts2, Spring, Hibernate &amp; SubVersion</li>
 
 </ul>
 
@@ -394,7 +394,7 @@
 
   <li class=deet>Java Developer in the GIS project team in TMB.</li>
 
-  <li class=deet>Tech used: Java, Spring, Hibernate, PostgreSQL & SubVersion</li>
+  <li class=deet>Tech used: Java, Spring, Hibernate, PostgreSQL &amp; SubVersion</li>
 
 </ul>
 
@@ -414,7 +414,7 @@
 
   <li class=deet>Developer in two new projects for Andbank.</li>
 
-  <li class=deet>Tech used: Java, HTML, CSS, JavaScript, Struts2, Spring, Hibernate & SubVersion</li>
+  <li class=deet>Tech used: Java, HTML, CSS, JavaScript, Struts2, Spring, Hibernate &amp; SubVersion</li>
 
 </ul>
 
@@ -432,7 +432,7 @@
 
   <li class=deet>Developer in the Clickedu platform team. It is a modular and versatile software management, oriented to the real needs of everyday life and coverage for different educational and institutional requirements as well as for students and families.</li>
 
-  <li class=deet>Tech used: PHP, MySQL, AJAX, HTML, CSS, JavaScript, jQuery & SubVersion</li>
+  <li class=deet>Tech used: PHP, MySQL, AJAX, HTML, CSS, JavaScript, jQuery &amp; SubVersion</li>
 
 </ul>
 
@@ -450,7 +450,7 @@
 
   <li class=deet>Java Developer in practices within the Banking and Insurance Department implementing a new module for the Prevention of Money Laundering and Financing of Terrorism.</li>
 
-  <li class=deet>Tech used: Java, HTML, CSS, JavaScript, Struts2, Spring, Hibernate & SubVersion</li>
+  <li class=deet>Tech used: Java, HTML, CSS, JavaScript, Struts2, Spring, Hibernate &amp; SubVersion</li>
 
 </ul>
 
