--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang='en-US'>
 <head>
-    <title>Carles Fusté | Software Engineer</title>
+    <title>Carles Fusté Bertran | Chief Technology Officer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -128,13 +128,13 @@
 </style>
 
 <div id=about>
-  <h1 id=name style='grid-area: name'>Carles Fusté</h1>
-  <div id=role style='grid-area: role'>Software Engineer</div>
+  <h1 id=name style='grid-area: name'>Carles Fusté Bertran</h1>
+  <div id=role style='grid-area: role'>Chief Technology Officer</div>
   <div id=contact style='grid-area: contact'><a href="mailto:hello@charly3pins.dev">hello@charly3pins.dev</a> • <a href="https://charly3pins.dev/">https://charly3pins.dev/</a></div>
 </div>
 
     <style></style>
-<p id=mission>Enjoying being in the ever-evolving world of technology, displaying boundless enthusiasm for exploring new innovations and emerging trends. Continuously learning, adapting, and coding, becoming a valuable asset on any team.</p>
+<p id=mission>As CTO, I bring a hands-on engineering mindset and a strategic vision to drive impactful change. I’m passionate about solving complex problems and aligning technology with business objectives to deliver measurable results. I have a product oriented mindset and experience on building high-performing teams, mentoring talent, and fostering environments where innovation thrives.</p>
 
     <br>
     <div id=skills>
@@ -176,13 +176,33 @@
 
 <div class=employer>
   <div class=role>
-    <div><strong>VP of Engineering</strong></div>
-    <div class=dates>June 2023 - Present</div>
+    <div><strong>Chief Technology Officer</strong></div>
+    <div class=dates>November 2024 - Present</div>
   </div>
   <div class=entity>Bankable <span class=loc>(Remote, Spain)</span></div>
 </div>
 
 <ul class=deets>
+
+</ul>
+
+</div>
+
+<div class=employer>
+  <div class=role>
+    <div><strong>VP of Engineering</strong></div>
+    <div class=dates>June 2023 - November 2024</div>
+  </div>
+  <div class=entity>Bankable <span class=loc>(Remote, Spain)</span></div>
+</div>
+
+<ul class=deets>
+
+  <li class=deet>Led agile engineering teams to deliver cutting-edge embedded finance solutions, aligning technology with business objectives and ensuring exceptional user experiences. I was responsible for scaling our engineering capacity, defining platform architecture, and upholding the highest security and compliance standards.</li>
+
+  <li class=deet>A key part of my role involved leading the transition and integration of technology teams, systems, and processes following our acquisition. In the absence of a VP of Technology or CTO at the acquiring company, I took charge of harmonizing engineering practices, fostering collaboration, and ensuring continuity across both organizations.</li>
+
+  <li class=deet>I built and nurtured a world-class engineering culture focused on psychological safety, inclusivity, and technical excellence. My responsibilities included recruiting and mentoring top talent, driving transformational data strategies, and streamlining delivery processes to achieve measurable outcomes for the business and our clients.</li>
 
 </ul>
 
