--- a/resume.html
+++ b/resume.html
@@ -177,12 +177,16 @@
 <div class=employer>
   <div class=role>
     <div><strong>Chief Technology Officer</strong></div>
-    <div class=dates>November 2024 - Present</div>
+    <div class=dates>November 2024 - June 2025</div>
   </div>
   <div class=entity>Bankable <span class=loc>(Remote, Spain)</span></div>
 </div>
 
 <ul class=deets>
+
+  <li class=deet>I drive the strategic technology vision and innovation roadmap for Bankable&#39;s embedded finance platform, overseeing all aspects of technology leadership from product development to enterprise architecture. I also lead cross-functional technology initiatives directly impacting business growth, working closely with executive leadership to align technology with market opportunities.</li>
+
+  <li class=deet>My responsibilities encompass defining and executing the company&#39;s technology strategy, including emerging technologies, platform scalability, and digital transformation initiatives. I oversee the entire technology organization (FE, BE, Platform, IT), fostering an innovation culture while maintaining operational excellence in security, compliance, and system reliability.</li>
 
 </ul>
 
@@ -211,7 +215,7 @@
 <div class=employer>
   <div class=role>
     <div><strong>Engineering Director</strong></div>
-    <div class=dates>April 2022 - Present</div>
+    <div class=dates>April 2022 - June 2023</div>
   </div>
   <div class=entity>AREX Markets <span class=loc>(Remote, Spain)</span></div>
 </div>
